# fhir-backend-service-epic-sample

./: .gitignore  README.md  package-lock.json  vite.config.js
RevStream/: .gitignore  PLAN.md  README.md  docker-compose.yml  setup.sh
RevStream/billing-simulator/: Dockerfile  requirements.txt  server.py
RevStream/cac-engine/: Dockerfile  cac_engine.py
RevStream/hl7-sender/: Dockerfile  sender.py
RevStream/samples/: 01_appendectomy.hl7  02_pneumonia_discharge.hl7  03_hip_fracture.hl7  04_heart_failure_progress.hl7  05_missing_patient_id.hl7  06_ct_scan_abdomen.hl7
RevStream/scripts/: import-classes.sh  send-test-message.sh  test-cac-engine.sh
RevStream/src/RevStream/: Installer.cls
RevStream/src/RevStream/DTL/: MDMtoDFT.cls
RevStream/src/RevStream/Message/: AlertMessage.cls  CACRequest.cls  CACResponse.cls  CodeItem.cls  (+1 more)
cds-service-express/: 0_PROJECT.md  1_CRD.md  2_DTR.md  3_PAS.md  README.md  crd-cds-hook.example.js  package-lock.json  package.json
cds-service-express/api/: crd-coverage-check.js  index.js
epic-sample/: package-lock.json
epic-sample/src/components/: HelloWorld.vue
hl7_fhir_mapping_agent/: .env.example  .gitignore  ARTICLE.md  PLAN.md  README.md  pyproject.toml
hl7_fhir_mapping_agent/data/examples/hl7_messages/: ADT_A01_sample.hl7  ADT_A01_with_zsegment.hl7  ORU_R01_sample.hl7
hl7_fhir_mapping_agent/demo/: app.py
hl7_fhir_mapping_agent/src/: __init__.py
hl7_fhir_mapping_agent/src/agent/: __init__.py  graph.py  nodes.py  prompts.py  state.py
hl7_fhir_mapping_agent/src/api/: __init__.py  app.py  models.py
hl7_fhir_mapping_agent/src/rag/: __init__.py  chunking.py  indexer.py  retriever.py
hl7_fhir_mapping_agent/src/tools/: __init__.py  fhir_lookup.py  parsing.py  schemas.py  validation.py
hl7_fhir_mapping_agent/tests/: test_parsing.py  test_tools.py
hl7_fhir_mapping_agent/tests/fixtures/: samples.py
src/router/: index.js
(+14 files in other folders)
